@@ -246,7 +246,7 @@ public class TraverseExecutionPlanner {
   private void handleClustersAsTarget(final SelectExecutionPlan plan, final List<Bucket> clusters, final CommandContext context) {
     final Database db = context.getDatabase();
     if (clusters.size() == 1) {
-      final Bucket bucket = clusters.get(0);
+      final Bucket bucket = clusters.getFirst();
       Integer bucketId = bucket.getBucketNumber();
       if (bucketId == null)
         bucketId = db.getSchema().getBucketByName(bucket.getBucketName()).getFileId();
