@@ -37,7 +37,7 @@ public class LSMTreeIndexCompositeTest extends TestHelper {
   @Test
   public void testGetAbsoluteId() {
     database.transaction(() -> {
-      final TypeIndex index = database.getSchema().getType("File").getIndexesByProperties("absoluteId").get(0);
+      final TypeIndex index = database.getSchema().getType("File").getIndexesByProperties("absoluteId").getFirst();
       for (int i = 0; i < TOT * TOT; ++i) {
         final IndexCursor value = index.get(new Object[] { i });
         assertThat(value.hasNext()).isTrue();
@@ -49,7 +49,7 @@ public class LSMTreeIndexCompositeTest extends TestHelper {
   @Test
   public void testGetRelative() {
     database.transaction(() -> {
-      final TypeIndex index = database.getSchema().getType("File").getIndexesByProperties("directoryId", "fileId").get(0);
+      final TypeIndex index = database.getSchema().getType("File").getIndexesByProperties("directoryId", "fileId").getFirst();
       for (int i = 0; i < TOT; ++i) {
         for (int k = 0; k < TOT; ++k) {
           final IndexCursor value = index.get(new Object[] { i, k });
@@ -66,7 +66,7 @@ public class LSMTreeIndexCompositeTest extends TestHelper {
   @Test
   public void testPartialNullGet() {
     database.transaction(() -> {
-      final TypeIndex index = database.getSchema().getType("File").getIndexesByProperties("directoryId", "fileId").get(0);
+      final TypeIndex index = database.getSchema().getType("File").getIndexesByProperties("directoryId", "fileId").getFirst();
       for (int i = 0; i < TOT; ++i) {
         final IndexCursor value = index.get(new Object[] { i, null });
         assertThat(value.hasNext()).withFailMessage( "id[" + i + "]").isTrue();
